Bunch of changes
1.  Using FormBuilder instead of HTML::Widget
2.  Created a breadcrumb
3.  XHTML fixes

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -5,7 +5,6 @@ body {
 	text-align: center;
 }
 
-
 #container {
 	/*width: 750px;*/
 	text-align: left;
@@ -21,7 +20,6 @@ body {
 	width: 70%;
 	border: 1px solid black;
 	border-top: 7px solid black;
-	border-bottom: none;
 	margin: 0 auto;
 	background-color: #b8b8b8;
 	padding: 15px;
@@ -39,10 +37,21 @@ body {
 	list-style-type: none;
 }
 
+#breadcrumb {
+	text-align: left;
+    width: 70%;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+	margin: 0 auto;
+	padding: 2px 15px;
+    background-color: #FFF;
+    font-size: .8em;
+}
+
 #header {
 	text-align: left;
 	padding-left: 10px;
-	height: 100;
+	height: 100px;
 }
 
 #header h1.title {
@@ -102,9 +111,19 @@ body {
 /* FORM stuff */
 label {
 	display: block;
-	width: 10em;
-	position: relative;
 	margin: .5em 0em;
+}
+label.required {
+    font-weight: bold;
+}
+label.invalid {
+    font-weight: bold;
+    color: #f00;
+}
+label .invalid_message {
+    color: #000;
+    font-weight: normal;
+    font-size: .8em;
 }
 
 label input, label select {
@@ -122,12 +141,4 @@ label input, label select {
 .submit {
 	display: block;
 	margin-top: 2em;;
-}
-
-.error_messages {
-	color: #F00;
-}
-
-.widget_fieldset {
-	border: none;
 }
