--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -22,7 +22,7 @@ body {
 	border-top: 7px solid black;
 	margin: 0 auto;
 	background-color: #b8b8b8;
-	padding: 15px;
+	padding: 5px 15px;
 	color: #404040;
 	font: bold 1.4em Arial, Helvetica, sans-serif;
 }
@@ -30,9 +30,9 @@ body {
 	color: #202020;
 }
 
-#navbar ul {
+#navbar ul,li {
 	margin: 0;
-	padding: 0;
+	padding: 0 3px;
 	display: inline;
 	list-style-type: none;
 }
@@ -50,11 +50,15 @@ body {
 
 #header {
 	text-align: left;
-	padding-left: 10px;
-	height: 100px;
+	width: 70%;
+	margin: 0 auto;
+	padding: 0 15px;
+	height: 35px;
 }
 
 #header h1.title {
+	margin: 0;
+	padding: 0;
 }
 
 #footer {
