--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -65,6 +65,11 @@ body {
 	margin: 0;
 	padding: 0;
 }
+#header h1.title a {
+	margin: 0;
+    color: #000;
+    text-decoration: none;
+}
 
 #footer {
 	border-top: 1px solid black;
